samples/_failures_safe/1761694890_2d9cd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7be1047c.c: In function ‘main’:
./samples/SAFE/__tmp_7be1047c.c:156:5: error: expected expression at end of input
  156 |     add_edge(&g, 0,
      |     ^~~~~~~~
./samples/SAFE/__tmp_7be1047c.c:156:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_7be1047c.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_7be1047c.c:156:5: error: expected declaration or statement at end of input
  156 |     add_edge(&g, 0,
      |     ^~~~~~~~
